item-page.html done. All pages done

--- a/item-page.html
+++ b/item-page.html
@@ -156,83 +156,87 @@
         <ul class="breadcrumbs">
           <li><a class="breadcrumbs-first" href="123">Главная</a></li>
           <li><a class="" href="456">Каталог</a></li>
-          <li><a class="breadcrumbs-active" href="456">Оперативная полиграфия</a></li>
+          <li><a class="" href="456">Оперативная полиграфия</a></li>
+          <li><a class="breadcrumbs-active" href="456">Печать визиток</a></li>
         </ul>
         <div class="main-tile">
-          <ul>
-            <li>
-              <a href="#">
-                <img width="200" height="151" alt="Оперативная полиграфия" src="uploads/services-tile/poly-tile1.png">
-              </a>
-              <div>
-                <a href="#" class="main-services__description">Печать визиток</a>
+          <div class="main-item">
+            <div class="main-item__text">
+              <h1>Почему у нас</h1>
+              <div class="main-item__textarea">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
               </div>
-            </li>
-            <li>
-              <a href="#">
-                <img width="200" height="151" alt="Оперативная полиграфия" src="uploads/services-tile/poly-tile2.png">
-              </a>
-              <div>
-                <a href="#" class="main-services__description">Цифровая печать</a>
-              </div>
-            </li>
-            <li>
-              <a href="#">
-                <img width="200" height="151" alt="Оперативная полиграфия" src="uploads/services-tile/poly-tile3.png">
-              </a>
-              <div>
-                <a href="#" class="main-services__description">Печать листовок и флаеров</a>
-              </div>
-            </li>
-            <li>
-              <a href="#">
-                <img width="200" height="151" alt="Оперативная полиграфия" src="uploads/services-tile/poly-tile4.png">
-              </a>
-              <div>
-                <a href="#" class="main-services__description">Печать буклетов</a>
-              </div>
-            </li>
-            <li>
-              <a href="#">
-                <img width="200" height="151" alt="Оперативная полиграфия" src="uploads/services-tile/poly-tile5.png">
-              </a>
-              <div>
-                <a href="#" class="main-services__description">Печать брошюр</a>
-              </div>
-            </li>
-            <li>
-              <a href="#">
-                <img width="200" height="151" alt="Оперативная полиграфия" src="uploads/services-tile/poly-tile6.png">
-              </a>
-              <div>
-                <a href="#" class="main-services__description">Печать календарей</a>
-              </div>
-            </li>
-            <li>
-              <a href="#">
-                <img width="200" height="151" alt="Оперативная полиграфия" src="uploads/services-tile/poly-tile7.png">
-              </a>
-              <div>
-                <a href="#" class="main-services__description">Печать постеров и плакатов</a>
-              </div>
-            </li>
-            <li>
-              <a href="#">
-                <img width="200" height="151" alt="Оперативная полиграфия" src="uploads/services-tile/poly-tile8.png">
-              </a>
-              <div>
-                <a href="#" class="main-services__description">Печать конвертов</a>
-              </div>
-            </li>
-            <li>
-              <a href="#">
-                <img width="200" height="151" alt="Оперативная полиграфия" src="uploads/services-tile/poly-tile9.png">
-              </a>
-              <div>
-                <a href="#" class="main-services__description">Печать открыток и приглашений</a>
-              </div>
-            </li>
-          </ul>
+            </div>
+            <div class="main-item__img">
+              <a href="#"><img width="335" height="345" src="uploads/item-img.jpg" alt=""></a>
+            </div>
+            <div class="clearfix"></div>
+            <div class="main-item__table">
+              <table class="tg">
+                <tr>
+                  <th class="tg-yw4l" colspan="5">Цены на изготовление визиток</th>
+                </tr>
+                <tr>
+                  <td class="tg-yw4l">Тираж</td>
+                  <td class="tg-yw4l">Цифровая печать 1+0</td>
+                  <td class="tg-yw4l">Цифровая печать 1+1</td>
+                  <td class="tg-yw4l">Цифровая печать 4+0</td>
+                  <td class="tg-yw4l">Цифровая печать 4+4</td>
+                </tr>
+                <tr>
+                  <td class="tg-yw4l">1 шт</td>
+                  <td class="tg-yw4l">10,60 р.</td>
+                  <td class="tg-yw4l">18,60 р.</td>
+                  <td class="tg-yw4l">120,10 р.</td>
+                  <td class="tg-yw4l">34,10 р.</td>
+                </tr>
+                <tr>
+                  <td class="tg-yw4l">1 шт</td>
+                  <td class="tg-yw4l">10,60 р.</td>
+                  <td class="tg-yw4l">18,60 р.</td>
+                  <td class="tg-yw4l">120,10 р.</td>
+                  <td class="tg-yw4l">34,10 р.</td>
+                </tr>
+                <tr>
+                  <td class="tg-yw4l">1 шт</td>
+                  <td class="tg-yw4l">10,60 р.</td>
+                  <td class="tg-yw4l">18,60 р.</td>
+                  <td class="tg-yw4l">120,10 р.</td>
+                  <td class="tg-yw4l">34,10 р.</td>
+                </tr>
+                <tr>
+                  <td class="tg-yw4l">1 шт</td>
+                  <td class="tg-yw4l">10,60 р.</td>
+                  <td class="tg-yw4l">18,60 р.</td>
+                  <td class="tg-yw4l">120,10 р.</td>
+                  <td class="tg-yw4l">34,10 р.</td>
+                </tr>
+                <tr>
+                  <td class="tg-yw4l">1 шт</td>
+                  <td class="tg-yw4l">10,60 р.</td>
+                  <td class="tg-yw4l">18,60 р.</td>
+                  <td class="tg-yw4l">120,10 р.</td>
+                  <td class="tg-yw4l">34,10 р.</td>
+                </tr>
+                <tr>
+                  <td class="tg-yw4l">1 шт</td>
+                  <td class="tg-yw4l">10,60 р.</td>
+                  <td class="tg-yw4l">18,60 р.</td>
+                  <td class="tg-yw4l">120,10 р.</td>
+                  <td class="tg-yw4l">34,10 р.</td>
+                </tr>
+                <tr>
+                  <td class="tg-yw4l">1 шт</td>
+                  <td class="tg-yw4l">10,60 р.</td>
+                  <td class="tg-yw4l">18,60 р.</td>
+                  <td class="tg-yw4l">120,10 р.</td>
+                  <td class="tg-yw4l">34,10 р.</td>
+                </tr>
+              </table>
+            </div>
+          </div>
           <div class="main-slider">
             <div class="main-slider__header">С нами работают и нам доверяют</div>
             <div class="main-slider__item">
